# VoxWeave

./: .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  overrides.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
experiments/: song_detect.py
scripts/: calib_segmentation.py  capture_scenario.py
tests/: test_align.py  test_asrfix.py  test_backend.py  test_backend_mlx.py  test_breakpoints.py  test_chunking.py  test_cli.py  test_config.py  test_config_gap.py  test_debug.py  test_emission_mask.py  test_gap_adaptive.py  test_gap_split.py  test_kinsoku.py  test_lang.py  test_mux.py  test_pipeline.py  test_pipeline_vad.py  test_progress.py  test_realign.py  test_scenarios.py  test_smart_split.py  test_smart_split_cleanup.py  test_smart_split_gap.py  test_smart_split_glue.py  test_smart_split_stutter.py  test_snap_punct.py  test_songdet.py  test_split_cursor_sync.py  test_timestamps.py  test_translate.py
tests/scenarios/: cecilia-bgm-debut.json  isekai-ed-overeat.json  yofukashi-rap-op.json
voxweave/: __main__.py  asrfix.py  backend.py  backend_mlx.py  chunking.py  cli.py  config.py  debug.py  export.py  lang.py  mux.py  pipeline.py  progress.py  realign.py  songdet.py  timestamps.py  translate.py  ui.py
voxweave/core/: __init__.py  breakpoints.py  conjunctions.py  gap_split.py  kinsoku.py  langsets.py  layout.py  schema.py  smart_split.py  timing.py
